Disalble the audio player animation before deleting the currently playing track.

BUG: 147548

svn path=/branches/extragear/kde3/multimedia/k3b/; revision=689560